--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
     </div>
 
 
-    <div class="containerArribals">
+    <div class="containerArrivals">
         <div class="text1">
             <h1> New Arribals✨</h1>
-            <button class="clickNewArribals"> Click aquí</button>
+            <button class="clickNewArrivals"> Click aquí</button>
         </div>
     </div>
 
