--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <div class="containerArrivals">
         <div class="text1">
-            <h1> New Arribals✨</h1>
+            <h1> New Arrivals✨</h1>
             <button class="clickNewArrivals"> Click aquí</button>
         </div>
     </div>
