--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="container">
         <div class="textoPortada">
             <h1>New Collection</h1>
-            <h1>Autumm-Winter 2019</h1>
+            <h1>Autumn-Winter 2019</h1>
 
         </div>
 
@@ -42,7 +42,7 @@
     </div>
 
     <div class="text2">
-        <h1>Sale Summer 2019</h1>
+        <h1 class="centrar">Sale Summer 2019</h1>
     </div>
 
     <div class="container2">
@@ -59,7 +59,7 @@
         </div>
 
     </div>
-    <h1 class="enc"> LookBook Autumm 2019</h1>
+    <h1 class="enc"> LookBook Autumn 2019</h1>
     <div class="containerLookbook">
 
          <div class="lookbook">
