--- a/index.html
+++ b/index.html
@@ -85,6 +85,13 @@
           <h1 class="descp2"> Modelo 6</h1>
       </div>
     </div>
+
+
+    <div class="containerNewsLetter">
+
+    </div>
+
+    
     <script src="empresa.js"></script>
 </body>
 
