--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="empresa.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Roboto" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=ZCOOL+XiaoWei" rel="stylesheet">
     <title>#Numeral* Bags & Clothes</title>
@@ -62,37 +64,65 @@
     <h1 class="enc"> LookBook Autumn 2019</h1>
     <div class="containerLookbook">
 
-         <div class="lookbook">
-           <h1 class="descp2"> modelo 1 </h1>
+        <div class="lookbook">
+            <h1 class="descp2"> modelo 1 </h1>
 
         </div>
-      <div class="lookbook2">
-          <h1 class="descp2"> Modelo 2</h1>
+        <div class="lookbook2">
+            <h1 class="descp2"> Modelo 2</h1>
 
-      </div>
-      <div class="lookbook3">
-          <h1 class="descp2"> Modelo 3</h1>
-      </div>
-      <div class="lookbook4">
-          <h1 class="descp2"> Modelo 4</h1>
-      </div>
+        </div>
+        <div class="lookbook3">
+            <h1 class="descp2"> Modelo 3</h1>
+        </div>
+        <div class="lookbook4">
+            <h1 class="descp2"> Modelo 4</h1>
+        </div>
 
-      <div class="lookbook5">
-          <h1 class="descp2"> Modelo 5</h1>
-      </div>
+        <div class="lookbook5">
+            <h1 class="descp2"> Modelo 5</h1>
+        </div>
 
-      <div class="lookbook6"> 
-          <h1 class="descp2"> Modelo 6</h1>
-      </div>
+        <div class="lookbook6">
+            <h1 class="descp2"> Modelo 6</h1>
+        </div>
     </div>
 
 
     <div class="containerNewsLetter">
+        <div class="imgnewsletter">
+            <img src="images/newsletter.jpg" class="imgnews">
 
-    </div>
+            <div class="logonewsletter">
+                <h1>#Numeral* </h1>
+                <h2> Bags & Clothes</h2>
 
-    
-    <script src="empresa.js"></script>
+
+                <div class="textnewsletter">
+                    <p>Dejanos tu e-mail para recibir novedades.
+                        eventos. beneficios exclusivos y más.</p>
+                    <div class="inputnewsletter">
+                        <input type="email" name="email" placeholder="Email" />
+                        <button id="submit" type="submit">
+                            Send
+                        </button>
+                    </div>
+                </div>
+                <div class="iconscontainer">
+                    <a href="#" class="icon-button twitter"><i class="fab fa-twitter"></i>
+                        <span></span></a>
+                    <a href="#" class="icon-button facebook"><i class="fab fa-facebook"></i>
+                        <span></span></a>
+
+                </div>
+            </div>
+
+
+
+
+
+        </div>
+        <script src="empresa.js"></script>
 </body>
 
 </html>
